add partial security for API with Spring Security and JWT, modify plugin generator with OpenAPI, fix pom
