# src/main/java/it/lorenzomalla/event/controller/AuthController.java
@@ -1,0 +1,125 @@
+package it.lorenzomalla.event.controller;
+
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
+
+import javax.validation.Valid;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.ResponseCookie;
+import org.springframework.http.ResponseEntity;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.web.bind.annotation.CrossOrigin;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+import it.lorenzomalla.event.configuration.security.JwtUtils;
+import it.lorenzomalla.event.entity.Role;
+import it.lorenzomalla.event.entity.User;
+import it.lorenzomalla.event.entity.enumaration.ERole;
+import it.lorenzomalla.event.model.LoginRequest;
+import it.lorenzomalla.event.model.UserInfoResponse;
+import it.lorenzomalla.event.repository.RoleRepository;
+import it.lorenzomalla.event.repository.UserRepository;
+import it.lorenzomalla.event.service.UserDetailsImpl;
+
+@CrossOrigin(origins = "*", maxAge = 3600)
+@RestController
+@RequestMapping("/api/auth")
+public class AuthController {
+
+	@Autowired
+	AuthenticationManager authenticationManager;
+
+	@Autowired
+	UserRepository userRepository;
+
+	@Autowired
+	RoleRepository roleRepository;
+
+	@Autowired
+	PasswordEncoder encoder;
+
+	@Autowired
+	JwtUtils jwtUtils;
+
+	@PostMapping("/signin")
+	public ResponseEntity<?> authenticateUser(@Valid @RequestBody LoginRequest loginRequest) {
+
+		Authentication authentication = authenticationManager.authenticate(
+				new UsernamePasswordAuthenticationToken(loginRequest.getUsername(), loginRequest.getPassword()));
+
+		SecurityContextHolder.getContext().setAuthentication(authentication);
+
+		UserDetailsImpl userDetails = (UserDetailsImpl) authentication.getPrincipal();
+
+		ResponseCookie jwtCookie = jwtUtils.generateJwtCookie(userDetails);
+
+		List<String> roles = userDetails.getAuthorities().stream().map(item -> item.getAuthority())
+				.collect(Collectors.toList());
+
+		return ResponseEntity.ok().header(HttpHeaders.SET_COOKIE, jwtCookie.toString())
+				.body(UserInfoResponse.builder().email(userDetails.getEmail()).username(userDetails.getUsername())
+						.id(userDetails.getId()).roles(roles).build());
+	}
+
+	@PostMapping("/signup")
+	public ResponseEntity<?> registerUser(@Valid @RequestBody LoginRequest signUpRequest) {
+		if (userRepository.existsByUsername(signUpRequest.getUsername())) {
+			return ResponseEntity.badRequest().build();
+		}
+
+		if (userRepository.existsByEmail(signUpRequest.getEmail())) {
+			return ResponseEntity.badRequest().build();
+		}
+
+		User user = User.builder().username(signUpRequest.getUsername()).email(signUpRequest.getEmail())
+				.password(encoder.encode(signUpRequest.getPassword())).build();
+
+		List<String> strRoles = signUpRequest.getRoles();
+		Set<Role> roles = new HashSet<>();
+
+		if (strRoles == null) {
+			findRole(roles, ERole.ROLE_USER);
+		} else {
+			strRoles.forEach(role -> {
+				switch (role) {
+				case "admin":
+					findRole(roles, ERole.ROLE_ADMIN);
+					break;
+				case "mod":
+					findRole(roles, ERole.ROLE_MODERATOR);
+					break;
+				default:
+					findRole(roles, ERole.ROLE_USER);
+				}
+			});
+		}
+
+		user.setRoles(roles);
+		userRepository.save(user);
+
+		return ResponseEntity.ok().build();
+	}
+
+	@PostMapping("/signout")
+	public ResponseEntity<?> logoutUser() {
+		ResponseCookie cookie = jwtUtils.getCleanJwtCookie();
+		return ResponseEntity.ok().header(HttpHeaders.SET_COOKIE, cookie.toString()).build();
+	}
+
+	private void findRole(Set<Role> roles, ERole erole) {
+		Role adminRole = roleRepository.findByName(erole)
+				.orElseThrow(() -> new RuntimeException("Error: Role is not found."));
+		roles.add(adminRole);
+	}
+}
