# src/main/resources/swagger.yaml
@@ -48,7 +48,7 @@ definitions:
         type: string
         description: Email address of the invited guest
         
-  Login:
+  LoginRequest:
     type: object
     required:
       - "username"
@@ -62,6 +62,33 @@ definitions:
         type: string
       phone:
         type: string
+      email:
+        type: string
+      roles:
+        type: array
+        items:
+          type: string
+
+  SignupRequest:
+    type: object
+    required:
+      - "username"
+      - "password"
+    properties:
+      id:
+        type: integer
+      username: 
+        type: string
+      password:
+        type: string
+      phone:
+        type: string
+      email:
+        type: string
+      roles:
+        type: array
+        items:
+          type: string
         
   ErrorModel:
     type: object
@@ -77,6 +104,25 @@ definitions:
         type: object
         additionalProperties:
           type: object
+
+  UserInfoResponse:
+    type: object
+    properties:
+      id: 
+        type: integer
+        format: int64
+      username:
+        type: string
+      email: 
+        type: string
+      phone: 
+        type: string
+      roles:
+        type: array
+        items:
+          type: string
+        
+      
 paths:
   /event:
     post:
@@ -209,10 +255,12 @@ paths:
           name: body
           required: true
           schema:
-            $ref: '#/definitions/Login'
+            $ref: '#/definitions/LoginRequest'
       responses:
         200:
           description: Success
+          schema:
+            $ref: '#/definitions/UserInfoResponse'
         500:
           description: Internal Server Error
           schema:
@@ -237,10 +285,12 @@ paths:
           name: body
           required: true
           schema:
-            $ref: '#/definitions/Login'
+            $ref: '#/definitions/SignupRequest'
       responses:
         200:
           description: Success
+          schema:
+            $ref: '#/definitions/UserInfoResponse'
         500:
           description: Internal Server Error
           schema:
@@ -253,4 +303,3 @@ paths:
           description: BadRequest
           schema:
             $ref: '#/definitions/ErrorModel'
-          
